<resources>
    <string name="iap_app_name">InAppPurchase</string>
    <string name="iap_shopping_cart">Shopping Cart</string>
    <string name="iap_shopping_cart_item">Shopping Cart item</string>
    <string name="iap_product_item_quantity">Quantity: </string>
    <string name="iap_delete">Delete</string>
    <string name="iap_info">Info</string>
    <string name="iap_continue_shopping">Continue shopping</string>
    <string name="iap_checkout">Checkout</string>
    <string name="iap_empty_cart">Your shopping cart is currently empty.</string>
    <string name="iap_out_of_stock">Out of stock</string>
    <string name="iap_total">Total</string>
    <string name="iap_items"> items</string>
    <string name="iap_delivery_method">Delivery Method</string>
    <string name="iap_delivery_description">Delivery is FREE when you spend $100 or more</string>
    <string name="iap_vat">VAT</string>
    <string name="iap_including_vat">Including VAT</string>
    <string name="iap_delivery_via">Delivery via FedEx</string>
    <string name="iap_enter_promo_code">Enter promo or gift code</string>
    <string name="iap_mr">mr</string>
    <string name="iap_mrs">ms</string>
    <string name="iap_shipping_address">Shipping address</string>
    <string name="iap_billing_address">Billing address</string>
    <string name="iap_salutation">Salutation</string>
    <string name="iap_salutation_none">None</string>
    <string name="iap_first_name">First name</string>
    <string name="iap_first_name_hint">Enter first name</string>
    <string name="iap_last_name">Last name</string>
    <string name="iap_last_name_hint">Enter last name</string>
    <string name="iap_address">Address</string>
    <string name="iap_address_line_one">Address line 1</string>
    <string name="iap_address_line_two">Address line 2</string>
    <string name="iap_address_line_one_hint">Enter address line 1</string>
    <string name="iap_address_line_two_hint">(optional)</string>
    <string name="iap_town">Town/City</string>
    <string name="iap_town_hint">Enter your town or city</string>
    <string name="iap_postal_code">Postal code</string>
    <string name="iap_postal_code_hint">Enter ZIP/Postal code</string>
    <string name="iap_country">Country</string>
    <string name="iap_country_hint">Enter your country</string>
    <string name="iap_state">State</string>
    <string name="iap_state_hint">State</string>
    <string name="iap_email">Email</string>
    <string name="iap_email_hint">Enter your email</string>
    <string name="iap_phone">Phone</string>
    <string name="iap_phone_hint">Enter phone number</string>
    <string name="iap_billing_address_is_same">Same as shipping address</string>
    <string name="iap_continue">Continue</string>
    <string name="iap_cancel">Cancel</string>
    <string name="iap_first_name_error">Please enter a valid first name</string>
    <string name="iap_last_name_error">Please enter a valid last name</string>
    <string name="iap_address_error">Please enter a valid address</string>
    <string name="iap_town_error">Please enter a valid town</string>
    <string name="iap_postal_code_error">Please enter a valid Zip Code</string>
    <string name="iap_country_error">Please enter a valid Country</string>
    <string name="iap_email_error">Please enter a valid email</string>
    <string name="iap_phone_error">Please enter a valid phone number</string>
    <string name="iap_add_new_address">Add a new address</string>
    <string name="iap_deliver_to_this_address">Deliver to this address</string>
    <string name="iap_selection_select_address">Select address</string>
    <string name="iap_edit">Edit</string>
    <string name="iap_save">Save</string>
    <string name="iap_update_address">Updating Shipping Address</string>
    <string name="iap_delete_address">Deleting Shipping Address</string>
    <string name="iap_order_summary">Order Summary</string>
    <string name="iap_pay_now">Pay now</string>
    <string name="iap_payment">Payment</string>
    <string name="iap_payment_method">Payment method</string>
    <string name="iap_use_payment_method">Use this payment method</string>
    <string name="iap_add_payment_method">Add a new payment method</string>
    <string name="iap_valid_until">Valid until</string>
    <string name="iap_confirmation">Confirmation</string>
    <string name="iap_thank_for_order">Thank you for your order</string>
    <string name="iap_your_order_number">Your order number is</string>
    <string name="iap_confirmation_email_msg">You will receive a confirmation e-mail shortly at %s</string>
    <string name="iap_cancel_payment">Do you want to cancel the payment? Your cart will be empty.</string>
    <string name="iap_continue_shopping_description">Do you want to continue shopping?</string>
    <string name="iap_payment_cancelled">Your payment was cancelled</string>
    <string name="iap_payment_failed">Payment failed</string>
    <string name="iap_payment_failed_title">There was a problem processing your payment</string>
    <string name="iap_payment_failed_message">Your account was not charged. Please try again.</string>
    <string name="iap_time_out">Time-out</string>
    <string name="iap_payment_session_expired">Your payment session is expired</string>
    <string name="iap_payment_pending">Your payment is pending</string>
    <string name="iap_payment_pending_confirmation">If the payment is confirmed you will receive a confirmation e-mail at</string>
    <string name="iap_payment_pending_not_confirmed">If the payment is not confirmed within %s hours we will inform you by e-mail what to do next.</string>
    <string name="iap_voucher">Voucher</string>
    <string name="iap_claim_voucher">Claim voucher</string>
    <string name="iap_redeem_voucher">Redeem voucher</string>
    <string name="iap_enter_promotional_voucher">Please enter your promotional voucher</string>
    <string name="iap_type_in_code">Type in code</string>
    <string name="iap_validate_voucher">Validate voucher</string>
    <string name="iap_revoke_promotion_voucher">Push the button to revoke your promotion voucher</string>
    <string name="iap_validating_voucher">Validating your voucher</string>
    <string name="iap_valid_voucher">you have entered a valid voucher</string>
    <string name="iap_apply">Apply</string>
    <string name="iap_delete_voucher">Delete voucher</string>
    <string name="iap_invalid_voucher">Invalid code. Please tyr again.</string>
    <string name="iap_delete_voucher_sure">Are you sure you want to delete the voucher?</string>
    <string name="iap_yes_delete">Yes, delete</string>
    <string name="iap_no_do_not_delete">No, don’t delete</string>
    <string name="iap_discount">discount</string>
    <string name="mastercard" translatable="false">Master card</string>
    <string name="iap_validity">Validity</string>
    <string name="iap_cvv_cvc">CVV/CVC</string>
    <string name="iap_txt_cvv_cvc">Enter CVV/CVC</string>
    <string name="iap_proceed">Proceed</string>
    <string name="iap_cvv_star">***</string>
    <string name="iap_product_catalog">Products</string>
    <string name="iap_no_product_available">No product found in your Store.</string>
    <string name="iap_products_unavailable">No products available</string>
    <string name="iap_something_gone_wrong">Something went wrong. We cannot find any products.</string>
    <string name="iap_buy_from_retailers">Buy from retailer</string>
    <string name="iap_add_to_cart">Add to cart</string>
    <string name="iap_buy_now">Buy now</string>
    <string name="iap_product_added">Product added to your shopping cart</string>
    <string name="iap_go_to_checkout">Go to checkout</string>
    <string name="iap_product_detail_title" translatable="false">Product details</string>
    <string name="iap_select_retailer">Select retailer</string>
    <string name="iap_retailer_title">Retailer</string>
    <string name="iap_in_stock">In stock</string>
    <string name="iap_retailer_title_for_no_retailers">No Retailers!</string>
    <string name="iap_no_retailer_message">There are no online retailers currently available for this product.</string>
    <string name="iap_order_history">Order history</string>
    <string name="iap_order_number">Order number # </string>
    <string name="iap_total_val">Total(0 Items)</string>
    <string name="iap_order_pending">Your order is pending</string>
    <string name="iap_no_items">No items here yet&#8230;</string>
    <string name="iap_empty_purchase_history">If you placed an order using this app, Please check your mail for the confirmation e-mail.</string>
    <string name="iap_other_channel">If you ordered using another sales channel your purchase might not show up here.</string>
    <string name="iap_contact_consumer_care">Contact Consumer Care</string>
    <string name="iap_order_details">Order details</string>
    <string name="iap_payment_by">Paid by</string>
    <string name="iap_shipped">Shipped</string>
    <string name="iap_not_yet_shipped">Not yet shipped</string>
    <string name="iap_order_created">Created</string>
    <string name="iap_order_processing">Processing</string>
    <string name="iap_order_completed">Completed</string>
    <string name="iap_not_shipped_msg">Your order is not yet shipped. It is expected to be handed over to the courier within 24 hours after your order was confirmed</string>
    <string name="iap_order_completed_text">Your order will be delivered by \nFedEx(parcel postage) \nTracking number %1$s</string>
    <string name="iap_order_completed_text_default">Your product has been shipped .Please login to check the status at www.shop.philips.com .</string>
    <string name="iap_order_completed_text_without_track_id">Your order will be delivered by \nFedEx(parcel postage)</string>
    <string name="iap_view_invoice">View invoice</string>
    <string name="iap_invoice">Invoice</string>
    <string name="iap_invoice_number">Number</string>
    <string name="iap_invoice_due_date">Due date</string>
    <string name="iap_invoice_paid">Paid</string>
    <string name="iap_your_invoice">Your invoice</string>
    <string name="iap_download_invoice">Download your invoice</string>
    <string name="iap_invoice_msg">This invoice belongs to order number</string>
    <string name="iap_order_again">Order again</string>
    <string name="iap_return_order">Return or exchange product</string>
    <string name="iap_one_click_buy">Buy again with 1-click</string>
    <string name="iap_contact_consumer_care_for_support">Please contact Philips Consumer care for further support.</string>
    <string name="iap_cancel_order_title">Cancel Order</string>
    <string name="iap_cancel_order">Cancel my order</string>
    <string name="iap_cancel_your_order">Cancel your order</string>
    <string name="iap_cancel_order_msg">You can cancel your order any time before it is handed over to the carrier.</string>
    <string name="iap_customer_help">Our customer care team is pleased to help you.</string>
    <string name="iap_keep_order_number">Please keep your order number at hand:</string>
    <string name="iap_opening_hours">Call center opening hours:\n</string>
    <string name="iap_call">Call</string>
    <string name="iap_handed_to_courier">Handed over to the carrier</string>
    <string name="iap_order_deliver_msg">Your order will be delivered by:FedEx(parcel postage)</string>
    <string name="iap_tracking_number">Tracking number</string>
    <string name="iap_track_order">Track order</string>
    <string name="iap_track_my_order">Track my order</string>
    <string name="iap_shipping_to">Shipping to</string>
    <string name="iap_order_picked">Your order was picked up by FedEx on</string>
    <string name="iap_track_package">You can track your package any time with tracking number</string>
    <string name="iap_track_shipment">Track my shipment</string>
    <string name="iap_shipped_to">Shipped To:</string>
    <string name="iap_ok">OK</string>
</resources>