<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/iap_shipping_address_margin_left"
        android:layout_marginStart="@dimen/iap_shipping_address_margin_left"
        android:layout_marginTop="@dimen/iap_order_header_top_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cancel_order_history_title"
            style="@style/tvOrderHeaderTitle"
            android:text="@string/iap_cancel_your_order"
            android:textSize="@dimen/header_title" />

        <TextView
            android:id="@+id/tv_cancel_order"
            style="@style/tvTitle"
            android:layout_marginTop="@dimen/iap_selection_address_select_address_margint_top"
            android:text="@string/iap_cancel_order_msg" />

        <TextView
            style="@style/tvTitle"
            android:layout_marginTop="0dp"
            android:text="@string/iap_customer_help" />

        <TextView
            android:id="@+id/tv_from_other_channel"
            style="@style/tvTitle"
            android:layout_marginTop="@dimen/iap_selection_address_select_address_margint_bottom"
            android:text="@string/iap_keep_order_number" />

        <Button
            android:id="@+id/bt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_from_other_channel"
            android:layout_marginTop="@dimen/iap_selection_address_select_address_margint_bottom"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_opening_timings"
            style="@style/tvTitle"
            android:layout_below="@+id/bt_phone_number"
            android:layout_marginTop="@dimen/iap_selection_address_select_address_margint_bottom"
            android:text="@string/iap_opening_hours" />
    </LinearLayout>


</RelativeLayout>