<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_thank"
        style="@style/tvHeaderTitle"
        android:text="@string/iap_thank_for_order" />

    <TextView
        android:id="@+id/tv_your_order_num"
        style="@style/tvTitle"
        android:layout_marginStart="@dimen/iap_shipping_address_margin_left"
        android:layout_marginTop="@dimen/iap_shipping_address_margin_top_bottom"
        android:text="@string/iap_your_order_number" />

    <TextView
        android:id="@+id/tv_order_num"
        style="@style/tvHeaderTitle"
        android:layout_marginTop="@dimen/iap_selection_address_cancel_margin_bottom"
        android:textSize="@dimen/title" />

    <TextView
        android:id="@+id/tv_confirm_email"
        style="@style/tvTitle"
        android:layout_marginEnd="@dimen/iap_shipping_address_margin_left"
        android:layout_marginLeft="@dimen/iap_shipping_address_margin_left"
        android:layout_marginRight="@dimen/iap_shipping_address_margin_left"
        android:layout_marginStart="@dimen/iap_shipping_address_margin_left"
        android:layout_marginTop="@dimen/iap_shipping_address_margin_top_bottom" />

    <Button
        android:id="@+id/tv_confirm_ok"
        style="@style/iapButtonStyle"
        android:enabled="true"
        android:text="@string/iap_ok" />

</LinearLayout>