<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_empty_purchase_history_title"
            style="@style/iapCentralesansBoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/iap_selection_address_select_address_margint_bottom"
            android:layout_marginStart="@dimen/iap_selection_address_layout_margin"
            android:layout_marginTop="@dimen/iap_selection_address_select_address_margint_top"
            android:text="@string/iap_no_items"
            android:textColor="?attr/uikit_baseColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_empty_order_history"
            style="@style/iapCentralesansBookFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/iap_selection_address_select_address_margint_bottom"
            android:layout_marginStart="@dimen/iap_selection_address_layout_margin"
            android:text="@string/iap_empty_purchase_history"
            android:textColor="?attr/uikit_baseColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_from_other_channel"
            style="@style/iapCentralesansBookFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/iap_selection_address_select_address_margint_bottom"
            android:layout_marginStart="@dimen/iap_selection_address_layout_margin"
            android:text="@string/iap_other_channel"
            android:textColor="?attr/uikit_baseColor"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_contact_consumer_care"
        style="?attr/uikit_outlinedButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="@dimen/iap_shopping_cart_image_margin_top"
        android:layout_marginRight="@dimen/iap_shopping_cart_image_margin_top"
        android:enabled="true"
        android:text="@string/iap_contact_consumer_care" />

    <Button
        android:id="@+id/btn_continue_shopping"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@id/btn_contact_consumer_care"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/network_margin_left_right"
        android:layout_marginLeft="@dimen/iap_shopping_cart_image_margin_top"
        android:layout_marginRight="@dimen/iap_shopping_cart_image_margin_top"
        android:enabled="true"
        android:text="@string/iap_continue_shopping" />

</RelativeLayout>
